--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-16 17:46:15
+lastsearch = 2024-07-17 06:34:07
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -22,8 +22,8 @@ title = chăn ga thắng lợi giá tốt Tháng 7, 2024 Chăn, Ga, Gối & ...
 url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
 
 [congtynemthangloi.com]
-match = -72.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
+match = -52.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -37,9 +37,9 @@ title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
 
 [nemhana.com]
-match = -84.0%%
-title = Nệm Memory Foam Thắng Lợi sát cánh trong từng giấc ngủ ...
-url = https://nemhana.com/nem-memory-foam-thang-loi/
+match = -40.0%%
+title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
+url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
 match = 4.0%%
