--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-17 03:20:39
+lastsearch = 2024-07-17 06:34:30
 
 [changagoidemsonghong.com]
-match = 33.3%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+match = 37.0%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [demhong.vn]
 match = 11.1%%
@@ -62,9 +62,9 @@ title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [alnena.vn]
-match = 14.8%%
-title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1441
-url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1441
+match = -3.7%%
+title = Bộ Chăn Ga Gối Chun Trần Alnena 100%% Cotton Mã A21237
+url = https://alnena.vn/products/bo-chan-ga-goi-chun-tran-alnena-100-cotton-ma-a21237
 
 [bedding.vn]
 match = 11.1%%
