--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-17 03:27:15
+lastsearch = 2024-07-17 06:36:41
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = -8.3%%
-title = Andy Futreal
-url = https://faculty.mdanderson.org/profiles/andrew_futreal.html
+match = 0.0%%
+title = Hans Lee, MD
+url = https://faculty.mdanderson.org/profiles/hans_lee.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -188.2%%
+title = Immunological memory to SARS-CoV-2 assessed for up to ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7805444/
 
 [books.google.com]
 match = -194.1%%
@@ -235,4 +235,14 @@ url = https://amerijet.com/
 match = -188.2%%
 title = Gorge On A $48 Durian Omakase Served By 'Bruno Mars' At ...
 url = https://www.todayonline.com/8days/eatanddrink/newsandopening/gorge-48-durian-omakase-served-bruno-mars-hip-cafe
+
+[www.amerijet.com]
+match = -170.6%%
+title = Amerijet: Shipping Company | Air Freight | Cargo Shipping
+url = https://www.amerijet.com/
+
+[gskpro.com]
+match = -35.3%%
+title = IMITREX (sumatriptan) tablets
+url = https://gskpro.com/content/dam/global/hcpportal/en_US/Prescribing_Information/Imitrex_Tablets/pdf/IMITREX-TABLETS-PI-PIL.PDF
 
