--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-17 01:49:04
+lastsearch = 2024-07-17 06:32:18
 
 [shopee.vn]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -12.5%%
-title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
+match = -25.0%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -37,9 +37,9 @@ title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [sieuthidem.vn]
-match = 16.7%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+match = 50.0%%
+title = Chiếu điều hoà Tencel - Hà Nội
+url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -47,9 +47,9 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [suongtuyet.com]
-match = -41.7%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 4.2%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [www.lazada.vn]
 match = 8.3%%
