--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-17 03:27:38
+lastsearch = 2024-07-17 06:32:39
 
 [tiki.vn]
 match = -47.6%%
@@ -17,14 +17,14 @@ title = CGV Cinemas Vietnam - Sau 4 ngày công chiếu tại Đài ...
 url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
-match = -66.7%%
-title = 18x2 Beyond Youthful Days Có Chiếu Tại Đìa Loan Ko
-url = https://www.tiktok.com/discover/18x2-beyond-youthful-days-có-chiếu-tại-đìa-loan-ko
+match = -19.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
