--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-17 05:31:40
+lastsearch = 2024-07-17 06:33:04
 
 [erado.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Giường ngủ da hạng sang mã 14
 url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
-match = -85.0%%
-title = Bộ Ga Gối Trải Giường Poly Cotton M2/M6/M8 Drap ...
-url = https://shopee.vn/Bộ-Ga-Gối-Trải-Giường-Poly-Cotton-M2-M6-M8-Drap-giường-bo-chun-có-kèm-2-vỏ-gối-(Khách-chọn-mẫu-để-lại-ghi-chú-nhé)-i.120217364.2150109535
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [noithatami.com]
 match = -75.0%%
