--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-17 05:40:12
+lastsearch = 2024-07-17 06:30:39
 
 [tuananh.vn]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Đệm bông Adaptive Fiber 3M
 url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [shopee.vn]
 match = -40.0%%
@@ -62,9 +62,9 @@ title = đệm tuấn anh
 url = https://www.demgiare.net/tag/dem-tuan-anh
 
 [www.instagram.com]
-match = -28.0%%
-title = ️PHỤ KIỆN IDOL❤️ | LOMO CARD xinh thế này ...
-url = https://www.instagram.com/moji.idol/p/CzYvrbGvwS9/
+match = -72.0%%
+title = Jason Huynh (@jhuyner16) • Instagram photos and videos
+url = https://www.instagram.com/jhuyner16/?locale=怡+TG/飞机:@buth2788}wT4lf????????֤??ImGkE
 
 [www.facebook.com]
 match = 0.0%%
