--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-17 04:34:16
+lastsearch = 2024-07-17 06:37:44
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -33.3%%
-title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = 11.1%%
-title = Đánh giá hiệu năng OPPO A78 4G
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/danh-gia-hieu-nang-oppo-a78-4g-smartphone-tam-trung-nhung-vo-cung-manh-me
+match = -51.9%%
+title = Cách hủy chặn cuộc gọi trên điện thoại đơn giản, nhanh ...
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/chi-tiet-cach-huy-chan-cuoc-goi-tren-dien-thoai-don-gian-nhanh-chong
 
 [metruyen.me]
 match = 33.3%%
