--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-17 03:31:25
+lastsearch = 2024-07-17 06:44:08
 
 [demxanh.com]
 match = 3.4%%
@@ -37,8 +37,8 @@ title = Chiếu điều hòa cao su non - Kho đệm
 url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.diepxuan.com]
-match = 58.6%%
-title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
+match = 65.5%%
+title = Điệp Xuân Chiếu điều hòa cao su 150x190
 url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
