--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-17 05:19:37
+lastsearch = 2024-07-17 06:45:39
 
 [munghoangphat.com]
 match = 48.0%%
@@ -12,19 +12,19 @@ title = màn chụp đỉnh vuông tự bung
 url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
-match = -40.0%%
-title = Màn chụp hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=màn chụp
+match = -28.0%%
+title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = 4.0%%
-title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
+match = -28.0%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [www.mungbaobao.com]
-match = 32.0%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = -32.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [www.diepxuan.com]
 match = 100.0%%
