CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-17 04:45:11
+lastsearch = 2024-07-17 08:01:29
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -200.0%%
-title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
-url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
+match = -187.5%%
+title = Có Duyên Không Nợ Remix - Tina Ho Cover x H2O Remix ...
+url = https://www.youtube.com/watch?v=A4t3QIeQiro
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -485,4 +485,14 @@ url = https://atgt.bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/9DJTiagaQT
 match = -225.0%%
 title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
 url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
+
+[www.bridgestone.com.vn]
+match = 6.2%%
+title = Bridgestone Rivals
+url = https://www.bridgestone.com.vn/vi/bridgestonerivals
+
+[www.bbc.com]
+match = -200.0%%
+title = Vụ bắn ông Trump: Kỳ vọng và quan điểm chính trị Mỹ ...
+url = https://www.bbc.com/vietnamese/articles/czrjv2xvnr4o
 
