--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-16 23:52:01
+lastsearch = 2024-07-17 07:59:53
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = 0.0%%
-title = Bài 14 – Quán buông bỏ
-url = https://langmai.org/thien-duong/sen-bup-tung-canh-he/bai-14-quan-chieu-buong-bo/
+match = -18.8%%
+title = Tụng 14 Giới Tiếp Hiện
+url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
 
 [phaata.com]
 match = -118.8%%
@@ -119,7 +119,7 @@ url = https://kenh14.vn/xuat-hien-bo-phim-duoc-khan-gia-viet-khen-nuoc-no-kich-t
 [www.dcine.vn]
 match = -25.0%%
 title = Lịch Chiếu Tại Rạp Phim Dcine
-url = https://www.dcine.vn/lich-chieu/dcine-quy-nhon-3.html
+url = https://www.dcine.vn/lich-chieu/dcine-ben-thanh-2.html
 
 [m.facebook.com]
 match = -125.0%%
