--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-17 05:31:17
+lastsearch = 2024-07-17 08:00:59
 
 [chieutrelanlan.com]
-match = -16.7%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
+match = -41.7%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [kyoryo.vn]
 match = -54.2%%
@@ -52,9 +52,9 @@ title = Hôm nay mới được nằm thử chiếc chiếu trúc, vô cùng má
 url = https://www.youtube.com/watch?v=kKMas4N_KAk
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 4.2%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/?locale=vi_VN
 
 [chieutrucsaigon.com]
 match = 12.5%%
