--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-17 05:33:40
+lastsearch = 2024-07-17 07:58:27
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -144.4%%
+title = Hội cư dân Prosper Plaza Quận 12 | Nem chua thanh hoá
+url = https://m.facebook.com/groups/2300069060013852/posts/8151625374858162/
 
 [thegioinem.com]
 match = -105.6%%
@@ -27,8 +27,8 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
+match = -105.6%%
+title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
 url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [eva.vn]
@@ -37,9 +37,9 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -105.6%%
-title = Dolce Gabbana Light Blue Intense Bargello Kodu
-url = https://www.tiktok.com/discover/dolce-gabbana-light-blue-intense-bargello-kodu
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.youtube.com]
 match = -144.4%%
@@ -87,9 +87,9 @@ title = 7-Eleven - Chuỗi cửa hàng tiện lợi và giao gấp (24 trên 7 .
 url = https://7-eleven.vn/
 
 [cpfoods.vn]
-match = -166.7%%
-title = Cách làm món nem rán giòn ngon, gói hình tam giác siêu ...
-url = https://cpfoods.vn/blogs/goc-am-thuc/cach-lam-mon-nem-ran-gion-ngon-goi-hinh-tam-giac-sieu-dep-don-gian
+match = -161.1%%
+title = Nem rán, chạo tôm Việt Nam lọt top món ăn nhẹ ngon nhất ...
+url = https://cpfoods.vn/blogs/the-gioi-am-thuc/nem-ran-chao-tom-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi
 
 [farmersmarket.vn]
 match = 22.2%%
