--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-17 04:31:12
+lastsearch = 2024-07-17 09:09:57
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Bóng Bulb HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-bulb-htlight
 
 [www.htlightlevel.vn]
-match = -120.0%%
-title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
-url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
+match = -206.7%%
+title = Đèn pha LED: giải pháp tối ưu cho chiếu sáng ngoài trời
+url = https://www.htlightlevel.vn/den-pha-led-chieu-sang-ngoai-troi/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
