--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-17 02:46:38
+lastsearch = 2024-07-17 09:03:08
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -232,9 +232,9 @@ title = Index of /assets/libs/tui-chart/maps
 url = https://www.dixondirectional.com/assets/libs/tui-chart/maps/
 
 [www.bloomberg.com]
-match = -150.0%%
-title = TUI1: TUI AG Stock Price Quote - Xetra
-url = https://www.bloomberg.com/quote/TUI1:GR
+match = -41.7%%
+title = TUI AG Stock Price Quote
+url = https://www.bloomberg.com/quote/TUI:LN
 
 [www.tuj.ac.jp]
 match = -333.3%%
