--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-17 06:36:41
+lastsearch = 2024-07-17 09:10:19
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,14 +142,14 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -188.2%%
-title = Immunological memory to SARS-CoV-2 assessed for up to ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7805444/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
-match = -194.1%%
-title = Actinobacteria: Prolific Producers of Bioactive Metabolites
-url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg3QJlpm&sig=ACfU3U2eTnGNbO13eh4OhwcMOK-_xY39Gg&hl=en&sa=X&ved=2ahUKEwiz5KCDi6yHAxW9mokEHeBiDHgQ6AF6BAglEAM
+match = -7.7%%
+title = Index Medicus
+url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqdlSvlK&sig=ACfU3U3oS51PuXB2dXLGtsovl5ERILYA0Q&hl=en&sa=X&ved=2ahUKEwiXyK-2_6yHAxXqEFkFHTlFCiwQ6AF6BAglEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
