--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-17 06:45:05
+lastsearch = 2024-07-17 09:04:45
 
 [eva.vn]
 match = -136.8%%
@@ -22,9 +22,9 @@ title = cây hoa mộc giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=cây hoa mộc
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 21.1%%
+title = Hoa chiều tím hồng cao C1
+url = https://mocnhienfarm.com/products/hoa-chieu-tim
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=CExmJXd-n0c
+match = -89.5%%
+title = CHIỀU THU HỌA BÓNG NÀNG | DATKAA x QT BEATZ ...
+url = https://www.youtube.com/watch?v=PlVlWl8kKmg
 
 [trungquang.com]
 match = 0.0%%
