--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-17 07:59:53
+lastsearch = 2024-07-17 09:09:45
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -380,4 +380,9 @@ url = https://pulaubidong.wordpress.com/2008/11/10/my-family-lived-on-pulau-bido
 match = -156.2%%
 title = Records of the Military Assistance Command Vietnam
 url = http://www.lexisnexis.com/documents/academic/upa_cis/3208_recsmacvpt1.pdf
+
+[lamdongtv.vn]
+match = -131.2%%
+title = Giết người vì mâu thuẫn cá nhân nhận 14 năm tù
+url = http://lamdongtv.vn/tin-tuc-n23818/giet-nguoi-vi-mau-thuan-ca-nhan-nhan-14-nam-tu.html
 
