--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-17 04:33:01
+lastsearch = 2024-07-17 09:08:49
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 [books.google.com]
 match = -150.0%%
 title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EdDayB-&sig=ACfU3U2kKVrz_l6eA3dRdAe6-98TUo1wNg&hl=en&sa=X&ved=2ahUKEwjj8Nm4wayHAxU9E1kFHWGBDiwQ6AF6BAgbEAM
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EdF7uv7&sig=ACfU3U0yICHjTlr7vfJm_VtcJRuCJXdqAA&hl=en&sa=X&ved=2ahUKEwjpybiL_6yHAxU0FFkFHSKVAiwQ6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
