--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-17 08:03:38
+lastsearch = 2024-07-17 09:09:34
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -17,9 +17,9 @@ title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
 url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
-match = 21.1%%
-title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
-url = https://www.lazada.vn/products/ga-chong-tham-cao-cap-2m-x-2m2-i1990801523.html
+match = -136.8%%
+title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
