--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-17 08:04:25
+lastsearch = 2024-07-17 09:49:35
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
 match = 12.5%%
@@ -52,8 +52,8 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -225.0%%
-title = Mae Chan bird checklist - Avibase - Bird Checklists of the World
+match = -143.8%%
+title = Bird Checklists of the World - Mae Chan - Avibase
 url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH03crmc
 
 [partner.goodsmile.info]
