--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-17 08:01:29
+lastsearch = 2024-07-17 09:46:40
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -157,9 +157,9 @@ title = số đỏ casino xs 24|Casino Online Châu Á
 url = https://sinhvien.mit.vn/số-đỏ-casino-xs-24.phtm
 
 [www.facebook.com]
-match = -218.8%%
-title = Không nhận ra Hoon oppa của Quyên: thon gọn hơn, nết ăn ...
-url = https://www.facebook.com/YanFoods/videos/2024-july-không-nhận-ra-hoon-oppa-của-quyên-thon-gọn-hơn-nết-ăn-cũng-từ-tốn-hơn/1166878684534764/
+match = 7.1%%
+title = Cuối Giờ Chiều
+url = https://www.facebook.com/cuoigiochieu/
 
 [www.bthh.org.vn]
 match = -68.8%%
