--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-17 09:04:34
+lastsearch = 2024-07-17 09:49:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [www.youtube.com]
-match = -123.8%%
-title = Lâm Bảo Minh vs Phạm Thái - ROUND 3 | GIẢI POOL 9 BI ...
-url = https://www.youtube.com/watch?v=9TKsBalGcwU
+match = -128.6%%
+title = Lâm Bảo Minh VS Hoàng Thái Duy - BÁN KẾT | GIẢI POOL 9 ...
+url = https://www.youtube.com/watch?v=t4CmzxmKkDg
 
 [chieutruc.info]
 match = -71.4%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -95.2%%
-title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
-url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
@@ -227,9 +227,9 @@ title = Kênh phát thanh tương tác số 1 Việt Nam
 url = https://vovgiaothong.vn/
 
 [chieutrucsaigon.com]
-match = 28.6%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
+match = 33.3%%
+title = CHIẾU TRÚC - CHIẾU TRE TPHCM
+url = https://chieutrucsaigon.com/
 
 [bvhttdl.gov.vn]
 match = -128.6%%
