--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-17 06:17:22
+lastsearch = 2024-07-17 09:47:23
 
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Can't_Feel_My_Face
+url = https://en.wikipedia.org/wiki/Non,_je_ne_regrette_rien
 
 [www.marysrosaries.com]
 match = -33.3%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC-zjwxx&sig=ACfU3U2Kuji-HJh_9FAvT_0FYntpQhamfw&hl=en&sa=X&ved=2ahUKEwiCtPnh7KuHAxWbD1kFHanNCywQ6AF6BAgiEAM
+match = -147.6%%
+title = Lippincott's Gazetteer of the World: A Complete Pronouncing ...
+url = https://books.google.com/books?id=R9zPRFeo8ZMC&pg=PA1450&lpg=PA1450&dq=nem+di+a+mon+9f+16+re&source=bl&ots=3eFHvDGa-F&sig=ACfU3U0h78ZfU-ZkpklELEN7E_DePgGrpQ&hl=en&sa=X&ved=2ahUKEwiA49vah62HAxXdD1kFHTsjDwMQ6AF6BAhCEAM
 
 [www.diepxuan.com]
 match = -81.0%%
