CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-17 09:10:19
+lastsearch = 2024-07-17 10:18:28
 
 [www.facebook.com]
 match = -141.2%%
@@ -147,9 +147,9 @@ title = Seeing the unseen of Chinese herbal medicine processing ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
-match = -7.7%%
-title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SqdlSvlK&sig=ACfU3U3oS51PuXB2dXLGtsovl5ERILYA0Q&hl=en&sa=X&ved=2ahUKEwiXyK-2_6yHAxXqEFkFHTlFCiwQ6AF6BAglEAM
+match = -194.1%%
+title = Actinobacteria: Prolific Producers of Bioactive Metabolites
+url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg3TPfiq&sig=ACfU3U3NBBs3fT0dUuAe4IKpE_7N7ORJwA&hl=en&sa=X&ved=2ahUKEwi7r4jUjq2HAxVJhYkEHUV7CXcQ6AF6BAgoEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
