--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-17 02:44:01
+lastsearch = 2024-07-17 10:17:09
 
 [www.lazada.vn]
 match = -61.1%%
@@ -17,9 +17,9 @@ title = Chợ Đông Ba - Nam Cali | Westminster CA
 url = https://www.facebook.com/quanohon/
 
 [thegioinem.com]
-match = -38.9%%
-title = Nệm 2 người nằm giá rẻ tốt nhất 2024
-url = https://thegioinem.com/nem-2-nguoi-nam-gia-re-tot-nhat-2024.html
+match = 23.5%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [garan.vn]
 match = -166.7%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -133.3%%
-title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
-url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
+match = -155.6%%
+title = Tipps and Tricks - How to make CHA GIO - Authentic ...
+url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.instagram.com]
 match = -138.9%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -172.2%%
-title = Món Ngon Người Việt Houston | Hi anh chị. Gia đình em đi ...
-url = https://m.facebook.com/groups/monngonnvh/posts/26322196667371647/
+match = 6.7%%
+title = Người Việt Cali
+url = https://m.facebook.com/groups/1330533356979172/
 
 [emartmall.com.vn]
 match = 0.0%%
