--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-17 05:43:55
+lastsearch = 2024-07-17 10:22:23
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = 0.0%%
-title = Vee Ayy Food
-url = https://www.facebook.com/veeayyfood/?locale=vi_VN
+match = 20.0%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
@@ -167,9 +167,9 @@ title = Báo sự cố
 url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 
 [www.instagram.com]
-match = -133.3%%
-title = CLAY - Cocktails & Cuisine (@clay_saigon)
-url = https://www.instagram.com/clay_saigon/?locale=找人做个罗马尼亚焊工資格證書联系{威信+TG/飞机:@buth2788}6TkHs??????ѧ??ƾ8c6a4
+match = -50.0%%
+title = Open app
+url = https://www.instagram.com/p/C0bphYSiGbB/
 
 [www.tiktok.com]
 match = -246.7%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [uspharma.vn]
 match = -16.7%%
