--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-17 04:29:14
+lastsearch = 2024-07-17 10:16:58
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Sylvia Gani
 url = https://www.facebook.com/sylviagani/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -323.1%%
+title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=8L7o3sc3crI
 
 [www.regmovies.com]
 match = -215.4%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -15.4%%
-title = Ayu Gani 🐘 (@ganegani)
-url = https://www.instagram.com/ganegani/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
@@ -510,4 +510,9 @@ url = https://www.nigeriahouse.com/documents/nin_in_usa.pdf
 match = 0.0%%
 title = 
 url = https://www.bibleref.com/John/3/John-3-16.html
+
+[www.the-sun.com]
+match = 0.0%%
+title = 
+url = https://www.the-sun.com/news/11689832/wolfie-and-sylvia-gani-engagement-announcement-video-instagram-youtube/
 
