--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-17 05:38:27
+lastsearch = 2024-07-17 10:23:50
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -37,8 +37,8 @@ title = Giường ngủ bọc nệm gỗ công nghiệp GB-15
 url = https://noithattamviet.net/giuong-ngu-boc-nem-go-cong-nghiep-gb-15
 
 [thangnhomsaigon.com]
-match = -100.0%%
-title = Top 21 Mẫu Giường Xếp Gấp Chính Hãng Cao Cấp 13/07 ...
+match = -105.0%%
+title = Top 21 Mẫu Giường Xếp Gấp Chính Hãng Cao Cấp 17/07/ ...
 url = https://thangnhomsaigon.com/giuong-xep/
 
 [greenfurni.vn]
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -75.0%%
-title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
-url = https://noithattana.vn/giuong-ngu/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
