--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-17 09:50:17
+lastsearch = 2024-07-17 10:23:28
 
 [shopee.vn]
 match = -52.4%%
@@ -112,8 +112,8 @@ title = Top 21 Mẫu Giường Xếp Gấp Chính Hãng Cao Cấp 13/07 ...
 url = https://thangnhomsaigon.com/giuong-xep/
 
 [noithatduongdong.com]
-match = 0.0%%
-title = Giường sắt 2 tầng có rèm -GT16
+match = 23.8%%
+title = Giường sắt 2 tầng -GT16
 url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
 
 [beyours.vn]
