--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-17 06:18:18
+lastsearch = 2024-07-17 10:22:44
 
 [thamaulac.com.vn]
-match = -22.2%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -38.9%%
+title = Thảm xốp ghép vân gỗ 60x60 cm màu sáng
+url = https://thamaulac.com.vn/san-pham/tham-xop-ghep-van-go-60x60-cm-mau-sang
 
 [xoptraisan.info]
 match = -11.1%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -27.8%%
-title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
-url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
+match = -55.6%%
+title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
+url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
 
 [thamtuonglam.vn]
 match = 21.4%%
