--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-16 23:48:19
+lastsearch = 2024-07-17 10:35:55
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -17,8 +17,8 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = -29.6%%
-title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024 | Mua tại Lazada.vn
+match = 22.2%%
+title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
