--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-16 22:52:03
+lastsearch = 2024-07-17 10:35:44
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
 match = -238.5%%
@@ -137,9 +137,9 @@ title = Mandy Chan | vanhattan-ent
 url = https://www.vanhattanent.com/mandy-chan
 
 [arxiv.org]
-match = -261.5%%
-title = LaSagnA: Language-based Segmentation Assistant for ...
-url = https://arxiv.org/html/2404.08506v1
+match = -276.9%%
+title = Divide & Bind Your Attention for Improved Generative ...
+url = https://arxiv.org/html/2307.10864v3
 
 [www.youtube.com]
 match = -223.1%%
