--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-17 08:05:32
+lastsearch = 2024-07-17 10:30:51
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -182.4%%
-title = HOA founded after I bought my house. Can I be forced to ...
-url = https://www.quora.com/HOA-founded-after-I-bought-my-house-Can-I-be-forced-to-join
+match = -194.1%%
+title = If you live in a neighborhood with a HOA can they keep out ...
+url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -82.4%%
-title = I need advice #lawyer #hoa #taylorswift
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -170.6%%
+title = Original Video of Hoa Guy Fines Neighbor for to Many ...
+url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
 
 [www.21alivenews.com]
 match = -123.5%%
