--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-17 04:48:19
+lastsearch = 2024-07-17 10:32:20
 
 [shopee.vn]
-match = -214.3%%
-title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
+match = -171.4%%
+title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
+url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
 
 [mungthienmetta.com]
-match = -214.3%%
-title = 1.6M x 2M | Mùng Ngủ Tự Bung Dành Cho 2-4 Người (Đỏ ...
-url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/1-6m-x-2m-mung-ngu-tu-bung-danh-cho-2-4-nguoi-do-do-mngu-1m6-2m-chinh-hang.html
+match = -185.7%%
+title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
+url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
 
 [tiki.vn]
 match = -221.4%%
