--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-17 06:17:44
+lastsearch = 2024-07-17 10:32:31
 
 [www.amazon.com]
 match = -309.1%%
@@ -22,14 +22,14 @@ title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
 url = https://decoviet.vn/tham-lot-ghe-sofa/
 
 [ghedamienbac.com]
-match = -227.3%%
-title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
-url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
+match = -300.0%%
+title = Cung Cấp Bàn Ghế Đá Granito Miền Bắc Rẻ Nhất Thị ...
+url = https://ghedamienbac.com/ban-ghe-da-granito/
 
 [noithathoaphat.com]
-match = -254.5%%
-title = Ghế da trưởng phòng SG350B - Nội thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg350b
+match = -290.9%%
+title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
+url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
 
 [dandoxe.com]
 match = -154.5%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = 18.2%%
-title = Bọc ghế da ô tô
-url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
+match = -318.2%%
+title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
+url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
 
 [github.com]
 match = -81.8%%
