--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-17 09:07:53
+lastsearch = 2024-07-17 10:38:22
 
 [www.lazada.vn]
 match = -55.6%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -138.9%%
-title = AXOR Universal Softsquare Shower door handle 444 mm
-url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
+match = -155.6%%
+title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
+url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
 
 [www.sciencedirect.com]
 match = -150.0%%
