CI images update

--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-17 09:03:08
+lastsearch = 2024-07-17 11:37:35
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = 0.0%%
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -350.0%%
-title = Chinese tourists fire grenades and drive tanks in Russia ' ...
-url = https://www.telegraph.co.uk/world-news/2024/07/16/chinese-tourists-fire-grenades-drive-tanks-russia-war-games/
+match = -341.7%%
+title = The US Navy's new missile has restored the lost era of Top ...
+url = https://www.telegraph.co.uk/news/2024/07/17/us-navy-sm-6-fighter-jet-missile-bvr-tomcat-phoenix-top-gun/
 
 [www.oneworld.com]
 match = -283.3%%
