--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-17 06:21:02
+lastsearch = 2024-07-17 11:37:56
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -163.2%%
-title = Một phụ nữ tử vong do uống phải thuốc sắc từ rễ cây lá ngón
-url = https://trithucvn.co/suc-khoe/tin-tuc-sk/mot-phu-nu-tu-vong-do-uong-phai-thuoc-sac-tu-re-cay-la-ngon.html
+match = -157.9%%
+title = Ăn cà rốt non 3 lần 1 tuần mang lại nhiều lợi ích sức khỏe
+url = https://trithucvn.co/suc-khoe/an-ca-rot-non-3-lan-1-tuan-mang-lai-nhieu-loi-ich-suc-khoe.html
 
 [bptv.vn]
 match = -57.9%%
