--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-17 04:33:12
+lastsearch = 2024-07-17 11:34:12
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -13,8 +13,8 @@ url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPC19056 160x200
-url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
+title = Everon Quảng Bình Ga phủ EPM19043 180x200
+url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
