--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-17 03:29:42
+lastsearch = 2024-07-17 11:32:43
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiK_bx1a&sig=ACfU3U02yH3tp1T5YRB9GltUIIiUdM8D1g&hl=en&sa=X&ved=2ahUKEwjDka2ls6yHAxXYIUQIHR16BG8Q6AF6BAgXEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjQDso9&sig=ACfU3U3pFp6tvxZ0b_WcI8dRq2xtrv4CuA&hl=en&sa=X&ved=2ahUKEwjqmMygn62HAxWgElkFHQeqCisQ6AF6BAg2EAM
 
 [www.phillyvoice.com]
 match = 0.0%%
