--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-17 07:59:21
+lastsearch = 2024-07-17 11:33:08
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -47,9 +47,9 @@ title = Over 1000 Companies Have Curtailed Operations in ...
 url = https://som.yale.edu/story/2022/over-1000-companies-have-curtailed-operations-russia-some-remain
 
 [www.reuters.com]
-match = -140.0%%
-title = Dutch police disperse anti-lockdown protesters in Amsterdam
-url = https://www.reuters.com/business/media-telecom/dutch-police-disperse-thousands-protesting-against-lockdown-measures-2022-01-02/
+match = -95.0%%
+title = Putin will not testify at Pussy Riot trial: court
+url = https://www.reuters.com/article/lifestyle/putin-will-not-testify-at-pussy-riot-trial-court-idUSBRE86J0TR/
 
 [esport1.hu]
 match = -135.0%%
