--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-17 11:17:22
+lastsearch = 2024-07-17 11:34:53
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu
+match = -54.5%%
+title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
+url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
 
 [decosy.com]
 match = -166.7%%
