CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-17 10:17:43
+lastsearch = 2024-07-17 11:45:31
 
 [www.galottery.com]
 match = -7.7%%
@@ -420,4 +420,9 @@ url = https://uwgathletics.com/
 match = -107.7%%
 title = WEEKLY WEATHER AND CROP BULLETIN
 url = https://www.usda.gov/sites/default/files/documents/wwcb.pdf
+
+[nassaunationalcable.com]
+match = 0.0%%
+title = 
+url = https://nassaunationalcable.com/blogs/blog/what-is-the-ampacity-of-14-awg-wire
 
