--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-17 10:19:33
+lastsearch = 2024-07-17 11:45:20
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,9 +17,9 @@ title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
 
 [www.lazada.vn]
-match = -19.0%%
-title = Thảm Phòng Khách 2m X 3m Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/tham-phong-khach-2m-x-3m/
+match = 23.8%%
+title = Thảm bali 2m x 3m cao cấp
+url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
 match = -128.6%%
