--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-17 10:31:03
+lastsearch = 2024-07-17 11:50:14
 
 [www.kymdan.com]
-match = 4.2%%
-title = Bộ ga trải giường Kymdan
-url = https://www.kymdan.com/danh-muc/drap-trai-giuong
+match = -333.3%%
+title = Kymdan
+url = https://www.kymdan.com/home.do?lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
