CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-17 10:18:28
+lastsearch = 2024-07-17 12:15:49
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = 0.0%%
-title = Hans Lee, MD
-url = https://faculty.mdanderson.org/profiles/hans_lee.html
+match = -17.6%%
+title = Philip L. Lorenzi, Ph.D.
+url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -122,9 +122,9 @@ title = Effect of Oral Methylprednisolone on Decline in Kidney ...
 url = https://pubmed.ncbi.nlm.nih.gov/35579642/
 
 [onlinelibrary.wiley.com]
-match = -158.8%%
-title = The Nanoarchitectonics of Sustainable Smart Window ...
-url = https://onlinelibrary.wiley.com/doi/abs/10.1002/adfm.202408014
+match = -194.1%%
+title = Photothermal Iron‐Based Riboflavin Microneedles for the ...
+url = https://onlinelibrary.wiley.com/doi/abs/10.1002/adhm.202304448
 
 [www.science.org]
 match = -182.4%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -235.3%%
+title = Artificial Intelligence in Lung Cancer Screening: The Future Is ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10486721/
 
 [books.google.com]
 match = -194.1%%
