--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-17 10:50:15
+lastsearch = 2024-07-17 12:14:59
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -177,9 +177,9 @@ title = Trường Đại học Quốc tế Hồng Bàng: Trang chủ
 url = https://hiu.vn/
 
 [www.hcmcpv.org.vn]
-match = -56.2%%
-title = Điểm tin ngày 17 tháng 6 năm 2024
-url = https://www.hcmcpv.org.vn/tin-tuc/diem-tin-ngay-17-thang-6-nam-2024-1491923815
+match = -193.8%%
+title = Bí thư Quận ủy Quận 3 Nguyễn Thanh Xuân thăm khu phố ...
+url = https://www.hcmcpv.org.vn/tin-tuc/bi-thu-quan-uy-quan-3-nguyen-thanh-xuan-tham-khu-pho-1-phuong-3-1491925052
 
 [hcmcpv.org.vn]
 match = -193.8%%
@@ -497,9 +497,9 @@ title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay 
 url = https://vn.investing.com/news/stock-market-news/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-2186636
 
 [kinhtedothi.vn]
-match = -225.0%%
-title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
-url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
+match = -175.0%%
+title = Tai nạn thương tâm tại Hoài Đức: nỗi đau đến từ đâu?
+url = https://kinhtedothi.vn/tai-nan-thuong-tam-tai-hoai-duc-noi-dau-den-tu-dau.html
 
 [www.trip.com]
 match = -112.5%%
@@ -520,4 +520,9 @@ url = https://tanhkhong.org/p105a4256/10/triet-nhu-tieng-hat-giua-troi-bai-57-su
 match = -6.2%%
 title = bóng đá v league 2022
 url = https://bvchuyenkhoasannhist.com.vn/muv/giai-phap-bong-da.html
+
+[vovgiaothong.vn]
+match = -87.5%%
+title = Cẩn trọng với dịch vụ đáo hạn ngân hàng
+url = https://vovgiaothong.vn/newsaudio/can-trong-voi-dich-vu-dao-han-ngan-hang-d39825.html
 
