--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-17 11:31:48
+lastsearch = 2024-07-17 12:21:24
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=QLDaAAAAMAAJ&pg=RA4-PA7&lpg=RA4-PA7&dq=chieu+lac+soc+10&source=bl&ots=1UvboxlgEl&sig=ACfU3U1A00iunS-URWJ0OTOBUn8WOwImCw&hl=en&sa=X&ved=2ahUKEwjZy_HJr6yHAxXulIkEHQbQDXgQ6AF6BAgjEAM
+match = -212.5%%
+title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
+url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378eGMLhz&sig=ACfU3U2J7ahITKxzfXE-4XTwYeFLSBBwng&hl=en&sa=X&ved=2ahUKEwiplIeRqq2HAxWVJUQIHbR3BF8Q6AF6BAgfEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
