--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-17 04:46:13
+lastsearch = 2024-07-17 12:20:30
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -100.0%%
-title = Danh sách đại lý đệm bông ép Everhome uy tín trên toàn ...
-url = https://demxanh.com/danh-sach-dai-ly-dem-bong-ep-everhome-uy-tin-tren-toan-quoc.html
+match = -19.0%%
+title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
 
 [www.ebay.com]
 match = -100.0%%
@@ -28,8 +28,8 @@ url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-A
 
 [sieuthidemonline.vn]
 match = -61.9%%
-title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = 14.3%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -57.1%%
-title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/
+match = 19.0%%
+title = Đệm Bông Ép Everhome Vỏ Cotton
+url = https://demviethome.vn/dem-bong-ep-everhome-vo-cotton/
 
 [www.tiktok.com]
 match = -95.2%%
