--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-17 11:39:33
+lastsearch = 2024-07-17 12:35:40
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -200.0%%
-title = KQ FELLAZ (KQ Entertainment Official Trainees) (Updated!)
-url = https://kprofiles.com/kq-fellaz-kq-entertainment-official-trainees/
+match = -76.5%%
+title = xikers Members Profile (Updated!)
+url = https://kprofiles.com/xikers-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0t3x-5Eg&sig=ACfU3U0UVAlIv3mTnEq0ftbDKGy09okARA&hl=en&sa=X&ved=2ahUKEwj54KS3jKqHAxXMl4kEHfI1CX0Q6AF6BAgZEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVEQ_r19&sig=ACfU3U2a7Rv2ceBk2QNr4EOAUvJXvVNiRQ&hl=en&sa=X&ved=2ahUKEwjopqipra2HAxU1k4kEHc8PCHsQ6AF6BAgYEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -88,8 +88,8 @@ url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
 match = -211.8%%
-title = Where can I find ATEEZ content? I want to get into them but ...
-url = https://www.quora.com/Where-can-I-find-ATEEZ-content-I-want-to-get-into-them-but-I-don-t-know-where-to-start
+title = Does JYP allow his artists to write down their own songs or ...
+url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
 
 [msaniimusicgroup.org]
 match = 0.0%%
