--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-17 12:21:24
+lastsearch = 2024-07-17 12:37:32
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -94,7 +94,7 @@ url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 [books.google.com]
 match = -212.5%%
 title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
-url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378eGMLhz&sig=ACfU3U2J7ahITKxzfXE-4XTwYeFLSBBwng&hl=en&sa=X&ved=2ahUKEwiplIeRqq2HAxWVJUQIHbR3BF8Q6AF6BAgfEAM
+url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378eGNLex&sig=ACfU3U2Xkjk3zK6EtcZOsNqKTLiZe3JR0w&hl=en&sa=X&ved=2ahUKEwi2iePera2HAxUTg4kEHeicBn0Q6AF6BAgeEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
