--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-17 11:46:15
+lastsearch = 2024-07-17 12:36:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -90.5%%
-title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
-url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [demxanh.com]
 match = -28.6%%
@@ -322,9 +322,9 @@ title = Triển vọng, rào cản phát triển điện gió trên thế giới
 url = https://nangluongvietnam.vn/trien-vong-rao-can-phat-trien-dien-gio-tren-the-gioi-viet-nam-trong-ngan-va-trung-han-32826.html
 
 [www.facebook.com]
-match = -57.1%%
-title = CHIẾU TRÚC ĐIỀU HOÀ VÂN GỖ SỒI THÁI LAN VỀ XUA ...
-url = https://www.facebook.com/ChieuTrucThaiLanCaoCap/videos/chiếu-trúc-điều-hoà-vân-gỗ-sồi-thái-lan-về-xua-tan-nắng-nóng-cả-nhà-nhanh-tay-đặ/460042908404977/?locale=hi_IN
+match = -81.0%%
+title = Sản Xuất Mành Tre Trúc Tại Ninh Bình - 0908202799
+url = https://www.facebook.com/p/Sản-Xuất-Mành-Tre-Trúc-Tại-Ninh-Bình-0908202799-100022213401673/
 
 [dienmaycholon.com]
 match = -104.8%%
