--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-17 11:51:27
+lastsearch = 2024-07-17 12:40:04
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,14 +37,14 @@ title = Sylvia Gani
 url = https://www.facebook.com/sylviagani/
 
 [www.youtube.com]
-match = -215.4%%
-title = Jay-Z & Kanye West - Ni**as In Paris (Explicit)
-url = https://www.youtube.com/watch?v=gG_dA32oH44
+match = -323.1%%
+title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=8L7o3sc3crI
 
 [www.regmovies.com]
-match = -215.4%%
-title = Regal Hollywood @ North I-85 Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
+match = -223.1%%
+title = Regal Hollywood - Gainesville Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [dds.georgia.gov]
 match = -284.6%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -223.1%%
+title = Ayu Gani 🐘 (@ganegani) • Instagram photos and videos
+url = https://www.instagram.com/ganegani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
