--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-17 06:13:17
+lastsearch = 2024-07-17 12:31:25
 
 [www.instagram.com]
-match = -144.4%%
-title = Thùy Ngân (@huuloc861) • Instagram photos and videos
-url = https://www.instagram.com/huuloc861/
+match = -105.6%%
+title = Farmers Market | 🔥 NEM NƯỚNG ĐẬM VỊ TRUYỀN ...
+url = https://www.instagram.com/farmersmarketvietnam/p/C8LpJbxM717/
 
 [www.lazada.vn]
 match = -61.1%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -44.4%%
+title = Nệm Giá Kho Hồng Ngự - 16 Nguyễn Huệ
+url = https://www.facebook.com/nemgiakhohongngu/
 
 [thegioinem.com]
 match = -111.1%%
@@ -47,9 +47,9 @@ title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [lanchi.vn]
-match = -44.4%%
-title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 800ML
-url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-800ml/
+match = 16.7%%
+title = NEM CHUA HÀ THÀNH 200G
+url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
 match = -166.7%%
@@ -180,4 +180,9 @@ url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=https://
 match = -77.8%%
 title = BO GIAO DUC VA OAO TAO - Hoctap24h.vn
 url = https://hoctap24h.vn/wp-content/uploads/2018/04/Vật-Lí-10-Nâng-Cao.pdf
+
+[expatriates.stackexchange.com]
+match = -177.8%%
+title = Can a 16 year old US citizen get a temporary residence visa?
+url = https://expatriates.stackexchange.com/questions/24931/can-a-16-year-old-us-citizen-get-a-temporary-residence-visa
 
