CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-17 10:46:40
+lastsearch = 2024-07-17 13:47:08
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -43.5%%
-title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqTgeMXG&sig=ACfU3U1qyBTcZ4B01VcYXF1n_a4rcqKqtA&hl=en&sa=X&ved=2ahUKEwjvl__6lK2HAxV_l4kEHaY3An4Q6AF6BAgjEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 20 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA20&lpg=PA20&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz1PlfgTB&sig=ACfU3U0Pzuf3F2Vm28zZSfih7xrFQtbgvA&hl=en&sa=X&ved=2ahUKEwjai6imva2HAxVwnokEHcz8Bn0Q6AF6BAgiEAM
 
 [www.travelweekly.com]
 match = -87.0%%
