--- a/images/nem-dreamland-uc-120x190x09/config.ini
+++ b/images/nem-dreamland-uc-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-120x190x09.html
 lastopen = 2024-06-06 16:44:51
 
 [search]
-lastsearch = 2024-07-17 07:58:39
+lastsearch = 2024-07-17 13:49:03
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Dreamland
 url = https://www.michaelmarkowski.com/music/dreamland/
 
 [www.linkedin.com]
-match = -15.0%%
-title = Michael Didyk's Post
-url = https://www.linkedin.com/posts/didyk_how-nem-30-could-change-californias-clean-activity-7043436395138322432-9ijH
+match = -25.0%%
+title = Chris Crowell's Post
+url = https://www.linkedin.com/posts/chris-crowell-b065729_with-the-nem-30-re-proposal-finally-revealed-activity-6996867038493245440-SFR_?t={seek_to_second_number}
 
 [forums.maslowcnc.com]
 match = -81.5%%
@@ -27,9 +27,9 @@ title = "Please set $12, $13, $19, and $20"? - Maslow CNC Forums
 url = https://forums.maslowcnc.com/t/please-set-12-13-19-and-20/1707
 
 [www.badmintoncentral.com]
-match = -11.1%%
-title = Li Ning Rackets Fan Club :) | Page 289
-url = http://www.badmintoncentral.com/forums/index.php?threads/li-ning-rackets-fan-club.75225/page-289
+match = -29.6%%
+title = Racket Recommendation / Comparison | Page 429
+url = https://www.badmintoncentral.com/forums/index.php?forums/racket-recommendation-comparison.155/page-429&order=title&direction=asc
 
 [www.canardzone.com]
 match = -47.1%%
