--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-17 11:21:38
+lastsearch = 2024-07-17 13:46:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,8 +17,8 @@ title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
 url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
-match = 14.3%%
-title = Chiếu Trúc Thái Lan Giá Tốt T07/2024
+match = -81.0%%
+title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
