--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-17 12:15:38
+lastsearch = 2024-07-17 13:51:42
 
 [www.lazada.vn]
 match = -166.7%%
@@ -12,9 +12,9 @@ title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
 url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
 
 [shopee.vn]
-match = -180.0%%
-title = Vỏ gối vuông tựa lưng sofa 45x45cm 40x40cm Cotton 100 ...
-url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-sofa-45x45cm-40x40cm-Cotton-100-Hàn-Quốc-cao-cấp-màu-trơn-vải-nhập-khẩu-i.394907567.21561011731
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
