CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-17 13:19:51
+lastsearch = 2024-07-17 14:15:28
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Hồi Sinh Ngọc Rồng
 url = https://www.facebook.com/hoisinhngocrong/
 
 [vietnambiz.vn]
-match = -152.6%%
-title = Giá tăng cao, nông dân Đồng Nai dồn sức vực dậy vườn tiêu
-url = https://vietnambiz.vn/gia-tang-cao-nong-dan-dong-nai-don-suc-vuc-day-vuon-tieu-202471514186749.htm
+match = -115.8%%
+title = Giá vàng miếng SJC còn cao hơn thế giới 1 triệu đồng
+url = https://vietnambiz.vn/gia-vang-mieng-sjc-con-cao-hon-the-gioi-1-trieu-dong-2024717115122126.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -168.4%%
-title = Chuyên gia trang điểm nổi tiếng là 1 trong 6 người Việt tử ...
-url = https://trithucvn.co/tin-tuc-vn/chuyen-gia-trang-diem-noi-tieng-la-1-trong-6-nguoi-viet-tu-vong-o-thai-lan.html
+match = -157.9%%
+title = Ăn cà rốt non 3 lần 1 tuần mang lại nhiều lợi ích sức khỏe
+url = https://trithucvn.co/suc-khoe/an-ca-rot-non-3-lan-1-tuan-mang-lai-nhieu-loi-ich-suc-khoe.html
 
 [bptv.vn]
 match = -57.9%%
@@ -195,4 +195,9 @@ url = https://laodong.vn/su-kien-binh-luan/nem-da-tau-xe-la-tro-choi-man-ro-pha-
 match = 5.3%%
 title = Tin 24h ngày 13/7/2024
 url = https://thainguyentv.vn/tin-24h-ngay-1372024-105421.html
+
+[vnews.gov.vn]
+match = -68.4%%
+title = Lái tàu bị ném đá vỡ đầu khi qua Yên Bái
+url = https://vnews.gov.vn/news/lai-tau-bi-nem-da-vo-dau-khi-qua-yen-bai-127309.htm
 
