--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-17 10:46:00
+lastsearch = 2024-07-17 14:13:28
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -12,14 +12,14 @@ title = Bộ Chăn Ga Gối PYEODA LSP
 url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
 
 [demsingapore.com]
-match = -70.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
+match = -80.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -70.0%%
+title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html
 
 [www.facebook.com]
 match = -45.0%%
@@ -80,4 +80,9 @@ url = https://remdemgiaphat.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-
 match = -70.0%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món PL5M 16
 url = https://thegioidemonline.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon-pl5m-16.html
+
+[changagoidemsonghong.online]
+match = -150.0%%
+title = [Cập nhật] Bảng giá chăn Ga gối đệm Singapore mới nhất 2020
+url = https://changagoidemsonghong.online/cap-nhat-bang-gia-chan-ga-goi-dem-singapore-moi-nhat-2020.html
 
