--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-17 12:41:35
+lastsearch = 2024-07-17 14:13:49
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Ruột nệm Korea 180x200x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
 match = -56.0%%
@@ -87,8 +87,8 @@ title =
 url = https://oec.world/en/profile/bilateral-country/kor/partner/deu
 
 [www.reddit.com]
-match = -40.0%%
-title = Korean equivalent to Emergen-C and Tylenol?
+match = -100.0%%
+title = Korean equivalent to Emergen-C and Tylenol? : r/koreatravel
 url = https://www.reddit.com/r/koreatravel/comments/12jl64t/korean_equivalent_to_emergenc_and_tylenol/
 
 [momotherose.com]
