CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-17 11:16:58
+lastsearch = 2024-07-17 14:33:51
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = -16.0%%
@@ -112,9 +112,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [trithucvn.co]
-match = -84.0%%
-title = Ông Trump đã đi chơi golf chưa đầy 24 giờ sau khi bị ám ...
-url = https://trithucvn.co/the-gioi/ong-trump-da-di-choi-golf-chua-day-24-gio-sau-khi-bi-am-sat-hut.html
+match = -76.0%%
+title = Mỹ mua lại dàn tên lửa Hawk của Đài Loan để viện trợ cho ...
+url = https://trithucvn.co/the-gioi/my-mua-lai-dan-ten-lua-hawk-cua-dai-loan-de-vien-tro-cho-ukraine.html
 
 [www.klook.com]
 match = -12.0%%
