--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-17 13:47:08
+lastsearch = 2024-07-17 14:31:02
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -67,9 +67,9 @@ title = Thái Bình: Phải sớm khắc phục những tồn tại, hạn chế
 url = https://sonoivu.thaibinh.gov.vn/van-ba-n-chi-da-o-die-u-ha-nh/chuyen-doi-so/thai-binh-phai-som-khac-phuc-nhung-ton-tai-han-che-trong-thu.html
 
 [www.facebook.com]
-match = -30.4%%
-title = Bệnh viện Thái Bình - Đa khoa Chất lượng cao
-url = https://www.facebook.com/Benhvienchatluongcao/
+match = -113.0%%
+title = TikToker Bình Yên casting Rap Việt 2024 chứng minh tuổi tác ...
+url = https://www.facebook.com/VieNETWORKDatVietVAC/videos/tiktoker-bình-yên-casting-rap-việt-2024-chứng-minh-tuổi-tác-không-là-vấn-đề-rap-/1003673654470670/
 
 [lpbank.com.vn]
 match = -200.0%%
@@ -330,4 +330,14 @@ url = https://www.adb.org/vi/where-we-work/viet-nam
 match = -73.9%%
 title = Hotels near Nhà vườn Saigon Greenery, Ho Chi Minh City
 url = https://us.trip.com/hotels/ho-chi-minh-city-nh-vn-saigon-greenery/hotels-c301m51872941/
+
+[en.tripadvisor.com.hk]
+match = -113.0%%
+title = Ka Chai Thai Street Food - Thomaston Restaurants - Tripadvisor
+url = https://en.tripadvisor.com.hk/Restaurant_Review-g40922-d25361618-Reviews-Ka_Chai_Thai_Street_Food-Thomaston_Maine.html
+
+[www.hastingstribune.com]
+match = -91.3%%
+title = PROPACK VIETNAM 2024 - Many privileges for exhibitors
+url = https://www.hastingstribune.com/vietfood-beverage---propack-vietnam-2024---many-privileges-for-exhibitors/article_5d7a9e25-8599-54ea-b5bb-9f4932912b6e.html
 
