--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-17 11:21:05
+lastsearch = 2024-07-17 14:34:15
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
-match = -318.2%%
-title = Có bán Khung giường bằng kim loại tại Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
+url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -117,14 +117,14 @@ title = Wgm yura legendado [OZVilB]
 url = https://www.nitrc.org/links/?group_id=51&url=https://detsad147vrn.ru/27146399zfe43a
 
 [www.airbnb.com.vn]
-match = -245.5%%
-title = Giường Queen | Phòng tắm riêng |Roku TV - Airbnb
-url = https://www.airbnb.com.vn/rooms/1184189834133814370
+match = -318.2%%
+title = Loretta 's Lodge: SuperiorViews+Sauna+8 giường+GameRM
+url = https://www.airbnb.com.vn/rooms/910033040188176538
 
 [vn.trip.com]
-match = -254.5%%
-title = Country Inn & Suites by Radisson, Owatonna, MN
-url = https://vn.trip.com/hotels/owatonna-hotel-detail-2921915/country-inn-and-suites-by-radisson-owatonna-mn/
+match = -281.8%%
+title = Country Inn & Suites by Radisson, Stillwater, MN
+url = https://vn.trip.com/hotels/stillwater-1-hotel-detail-2885985/comfort-inn-and-suites-stillwater/
 
 [comehome.com.vn]
 match = -90.9%%
@@ -175,4 +175,14 @@ url = https://www.ykhoakimyen.com/chi-tiet/giuong-keo-cot-song-lung-2-khuc-tjm-g
 match = -309.1%%
 title = Giường Ngủ Gỗ Công Nghiệp Hiện Đại có ngăn kéo đa năng
 url = https://www.igea.com.vn/products/giuong-ngu-hien-dai-gp248
+
+[mraovat.nguoi-viet.com]
+match = -190.9%%
+title = Phòng Cho Thuê - Rooms To Share - mrv
+url = https://mraovat.nguoi-viet.com/classified/phong-cho-thue-rooms-to-share-browse-88.aspx
+
+[vinmus.com]
+match = -227.3%%
+title = Bộ giường ngủ A1 - 1 giường - 2 tab đầu giường
+url = https://vinmus.com/en/bo-giuong-ngu-a1-1-giuong-2-tab-dau-giuong.html
 
