--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-17 05:31:52
+lastsearch = 2024-07-17 14:32:41
 
 [www.diepxuan.com]
-match = 13.6%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 140x190
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -17,9 +17,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+match = -27.3%%
+title = Thảm Lông Trải Giường Giá Rẻ Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/tham-long-trai-giuong-gia-re/
 
 [flexhouse.vn]
 match = -50.0%%
@@ -42,8 +42,8 @@ title = thảm trải sàn giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải sàn
 
 [blanc.vn]
-match = -104.5%%
-title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả ...
+match = -72.7%%
+title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D ...
 url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
