CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-17 12:20:09
+lastsearch = 2024-07-17 14:44:23
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Do HOAs have to report beneficial ownership under the ...
 url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-report-beneficial-ownership-under-the-cta
 
 [www.flsenate.gov]
-match = -129.4%%
-title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+match = -147.1%%
+title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
+url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919z1.RRS.PDF
 
 [www.doorloop.com]
 match = 0.0%%
@@ -390,4 +390,14 @@ url = https://www.jcs.mil/
 match = 0.0%%
 title = 
 url = https://www.providentlawyers.com/5-new-arizona-laws-that-affect-owners-and-residents-of-hoa-communities/
+
+[mgaleg.maryland.gov]
+match = -82.4%%
+title = Fiscal and Policy Note for House Bill 1039
+url = https://mgaleg.maryland.gov/2024RS/fnotes/bil_0009/hb1039.pdf
+
+[mpdc.dc.gov]
+match = -70.6%%
+title = Metropolitan Police Department - DC.gov
+url = https://mpdc.dc.gov/
 
