--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-17 13:41:28
+lastsearch = 2024-07-17 14:44:02
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = 8.7%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = -17.4%%
+title = Highest Volume Cryptocurrencies
+url = https://cryptoslate.com/highest-volume/
 
 [www.irs.gov]
 match = -78.3%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -65.2%%
+title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -355,4 +355,9 @@ url = https://www.abc.net.au/news/2024-01-19/north-korean-teenagers-sentenced-fo
 match = -82.6%%
 title = Educational Responses to the COVID-19 Outbreak in ...
 url = https://files.eric.ed.gov/fulltext/EJ1288073.pdf
+
+[www.osan.af.mil]
+match = 10.0%%
+title = Osan Air Base > Home
+url = https://www.osan.af.mil/
 
