--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-17 11:37:24
+lastsearch = 2024-07-17 14:50:13
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+match = 5.0%%
+title = Giường da hạng sang mã DV14
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm trải giường
+match = -85.0%%
+title = Bộ Ga Gối Trải Giường Poly Cotton M2/M6/M8 Drap ...
+url = https://shopee.vn/Bộ-Ga-Gối-Trải-Giường-Poly-Cotton-M2-M6-M8-Drap-giường-bo-chun-có-kèm-2-vỏ-gối-(Khách-chọn-mẫu-để-lại-ghi-chú-nhé)-i.120217364.2150109535
 
 [noithatami.com]
 match = -75.0%%
