--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-17 06:31:35
+lastsearch = 2024-07-17 14:47:33
 
 [demxanh.com]
 match = -4.5%%
@@ -13,8 +13,8 @@ url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 4
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
 match = 22.2%%
