--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-17 10:20:21
+lastsearch = 2024-07-17 14:47:42
 
 [www.youtube.com]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, h
 url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
-match = -44.4%%
-title = Cách chặn tất cả cuộc gọi đến Viettel, MobiFone ...
-url = https://www.thegioididong.com/hoi-dap/cach-chan-cuoc-goi-den-mang-viettel-mobifone-vinaphone-1363346
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -72,9 +72,9 @@ title = Vợ U65 nhưng vẫn liên tục đòi hỏi 'chuyện chăn gối'
 url = https://tintuconline.com.vn/yeu/vo-u65-nhung-van-lien-tuc-doi-hoi-chuyen-chan-goi-n-604589.html
 
 [vnexpress.net]
-match = 0.0%%
-title = Tôi thường bị vợ 'cấm vận' mỗi khi giận
-url = https://vnexpress.net/toi-thuong-bi-vo-cam-van-moi-khi-gian-2416485.html
+match = 7.4%%
+title = Tủi thân khi vợ thờ ơ chuyện chăn gối
+url = https://vnexpress.net/tui-than-khi-vo-tho-o-chuyen-chan-goi-4448969.html
 
 [th-ttsia2.quangdien.thuathienhue.edu.vn]
 match = 9.1%%
@@ -205,4 +205,9 @@ url = https://giaophanvinhlong.net/cach-xung-ho-trong-gia-dinh-viet-nam-2.html
 match = -37.0%%
 title = Sự Thật Phơi Bày - Page 11 - Diễn Đàn KSCN-Thân Hữu
 url = https://www.kysucongnghe.net/forum/viewtopic.php?t=1385&start=100
+
+[baomoi.com]
+match = -37.0%%
+title = Ngày nào anh rể cũng mang nước gừng cho vợ ngâm ...
+url = https://baomoi.com/ngay-nao-anh-re-cung-mang-nuoc-gung-cho-vo-ngam-chan-khien-toi-ghen-ti-do-mat-den-khi-anh-gap-tai-nan-su-doi-tra-bay-lau-moi-bai-lo/c/43451735.epi
 
