CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-17 14:48:17
+lastsearch = 2024-07-17 15:18:34
 
 [burningman.org]
 match = 0.0%%
@@ -704,7 +704,7 @@ url = https://wayne.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/wayne-state-2329/applying
+url = https://www.usnews.com/best-colleges/jhu-2077
 
 [www.legodiscoverycenter.com]
 match = -186.7%%
@@ -735,4 +735,14 @@ url = https://www.costco.com/
 match = -133.3%%
 title = Periods and fertility in the menstrual cycle
 url = https://www.nhs.uk/conditions/periods/fertility-in-the-menstrual-cycle/
+
+[floridapoly.edu]
+match = -240.0%%
+title = Florida Polytechnic University: Undergraduate & Graduate ...
+url = https://floridapoly.edu/
+
+[www.pjm.com]
+match = -18.2%%
+title = PJM Website
+url = https://www.pjm.com/
 
