--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-17 13:21:29
+lastsearch = 2024-07-17 15:18:43
 
 [changagoidemsonghong.com]
-match = 4.2%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -50.0%%
+title = Bảng giá Chăn Ga Gối Đệm Sông Hồng chính hãng 2024 ...
+url = https://changagoidemsonghong.com/
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -145,4 +145,9 @@ url = https://thitruongsi.com/bo-chan-ga-goi-cotton-phoi-mau-gia-re-1713025.html
 match = 4.2%%
 title = Bộ chăn mền ga gối Goni tici màu đỏ mận xám
 url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-do-man-xam/
+
+[flexhouse.vn]
+match = 0.0%%
+title = Bộ chăn ga gối sáp mềm gân xanh nút cài JJ9016
+url = https://flexhouse.vn/bọ-chan-ga-goi-sap-mem-gan-xanh-nut-cai-jj9016
 
