CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-17 15:16:03
+lastsearch = 2024-07-17 15:38:50
 
 [scholar.google.com]
 match = -43.8%%
@@ -72,9 +72,9 @@ title = Cây lác (cây cói): Ý nghĩa, hình ảnh, cách trồng, chăm sóc
 url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc-tai-nha-171408.html
 
 [baomoi.com]
-match = -200.0%%
-title = Bằng Kiều bị Tự Long từ chối nhưng lại chiêu dụ được S.T ...
-url = https://baomoi.com/bang-kieu-bi-tu-long-tu-choi-nhung-lai-chieu-du-duoc-s-t-son-thach-nho-so-troi-c49639522.epi
+match = -93.8%%
+title = Những chuyến phà cuối cùng tại bến Rừng
+url = https://baomoi.com/nhung-chuyen-pha-cuoi-cung-tai-ben-rung-c49655596.epi
 
 [ivymoda.com]
 match = -193.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -68.8%%
-title = ANTT thị xã Vĩnh Châu | Vinh Chau
-url = https://www.facebook.com/antttxvc/?locale=vi_VN
+match = -168.8%%
+title = Sáng nay ngày 16/7, Ngày hội Bác... - Theanh28 ...
+url = https://www.facebook.com/story.php/?story_fbid=794833859498385&id=100069153349307
 
 [www.cgv.vn]
 match = -143.8%%
@@ -182,9 +182,9 @@ title = 4 bộ phim Hoa ngữ bị cấm chiếu vì ngập tràn cảnh nóng .
 url = https://2sao.vn/4-bo-phim-hoa-ngu-bi-cam-chieu-vi-ngap-tran-canh-nong-tran-trui-n-196567.html
 
 [tuoitre.vn]
-match = -125.0%%
-title = Kỳ 4: Rao tình trên mạng, bán dâm ngoài đời
-url = https://tuoitre.vn/soc-voi-cho-tinh-tren-mang-ky-4-rao-tinh-tren-mang-ban-dam-ngoai-doi-20240630224648457.htm
+match = -175.0%%
+title = Bé trai sơ sinh bị bỏ rơi cùng với lá thư của người mẹ
+url = https://tuoitre.vn/be-trai-so-sinh-bi-bo-roi-cung-voi-la-thu-cua-nguoi-me-me-xin-loi-con-20240717144225137.htm
 
 [cafef.vn]
 match = -212.5%%
@@ -312,9 +312,9 @@ title = Tập hợp thông tin báo chí phản ánh liên quan đến tình hì
 url = https://congan.binhthuan.gov.vn/tap-hop-thong-tin-bao-chi-phan-anh-lien-quan-den-tinh-hinh-antt-ngay-1862024-N2456.aspx
 
 [qrt.vn]
-match = -212.5%%
-title = Đại Lộc khen thưởng 18 tập thể, 09 cá nhân có thành tích ...
-url = https://qrt.vn/xa-hoi/dai-loc-khen-thuong-18-tap-the-09-ca-nhan-co-thanh-tich-xuat-sac-trong-hoc-tap-va-lam-theo-tu-tuong-dao-duc-phong-cach-ho-chi-minh/
+match = -225.0%%
+title = Thăng Bình tổ chức Hội thi tuyên truyền giới thiệu sách hè ...
+url = https://qrt.vn/xa-hoi/thang-binh-to-chuc-hoi-thi-tuyen-truyen-gioi-thieu-sach-he-nam-2024/
 
 [congly.vn]
 match = -193.8%%
@@ -465,4 +465,14 @@ url = https://chas.org/vi/events/list/page/18/?tribe-bar-date=2021-08-17
 match = -143.8%%
 title = HỢP TÁC XÃ TIỂU THỦ CÔNG NGHIỆP CHIẾU LÁC TIÊN ...
 url = https://thuvienphapluat.vn/ma-so-thue/hop-tac-xa-tieu-thu-cong-nghiep-chieu-lac-tien-tien-mst-2200275661.html
+
+[www.baosoctrang.org.vn]
+match = -162.5%%
+title = Bí thư Tỉnh ủy Lâm Văn Mẫn khảo sát các cụm công ...
+url = https://www.baosoctrang.org.vn/cong-nghiep/bi-thu-tinh-uy-lam-van-man-khao-sat-cac-cum-cong-nghiep-tren-dia-ban-huyen-ke-sach-74877.html
+
+[baoquangnam.vn]
+match = -175.0%%
+title = Kỷ niệm 50 năm chiến thắng Nông Sơn - Trung Phước (18 ...
+url = https://baoquangnam.vn/ky-niem-50-nam-chien-thang-nong-son-trung-phuoc-18-7-1974-18-7-2024-dung-xay-que-huong-tu-dau-an-vung-dat-3138037.html
 
