--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-17 06:47:33
+lastsearch = 2024-07-17 15:39:45
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -57,8 +57,8 @@ title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
 
 [news.artnet.com]
-match = -246.2%%
-title = Fugitive Billionaire Joseph Lau Will Auction Off ...
+match = -338.5%%
+title = Fugitive Billionaire Joseph Lau Will Auction Off Millions of ...
 url = https://news.artnet.com/market/billionaire-joseph-lau-auctions-2093755
 
 [www.beautypackaging.com]
