--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-17 13:22:48
+lastsearch = 2024-07-17 15:39:01
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -132,9 +132,9 @@ title = Thực phẩm bảo vệ sức khỏe Vitamin B Mix DHC | healthyct.vn
 url = https://healthyct.vn/san-pham/vitamin-b-mix-dhc/
 
 [www.tiktok.com]
-match = -57.1%%
-title = Tức ak, thoa kem cho cố buổi sáng táp táp giùm em kem ...
-url = https://www.tiktok.com/@chanhbeauty93/video/7237827360110726406
+match = -25.0%%
+title = BỪNG SÁNG LÀN DA VỚI VIÊN UỐNG TRẮNG DA NĂNG ...
+url = https://www.tiktok.com/@ultravvn/video/7330165886915038472
 
 [www.scribd.com]
 match = -10.7%%
