--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-17 11:14:44
+lastsearch = 2024-07-17 15:37:10
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = 20.0%%
-title = Rạp Chiếu Phim Cũ
-url = https://www.facebook.com/phimhaygiare/
+match = -220.0%%
+title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
+url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -137,9 +137,9 @@ title = bán nhà đường d2 phường tân thới nhất - Bán - tags
 url = https://batdongsan.com.vn/tags/ban/ban-nha-duong-d2-phuong-tan-thoi-nhat
 
 [www.youtube.com]
-match = -180.0%%
-title = CHUỘT GAMING DÀNH CHO GÓC SETUP RGB?! - Review ...
-url = https://www.youtube.com/watch?v=Z9kpqsTXNKM
+match = -113.3%%
+title = BLAH BLAH BLAH !giai !muagear !exitlag
+url = https://www.youtube.com/watch?v=724k4J4gc-Q
 
 [quangharvest.com]
 match = -186.7%%
@@ -265,4 +265,9 @@ url = https://www.ministop.vn/ms/all
 match = -246.7%%
 title = Phát động thi tuyển “Phương án kiến trúc cổng, tường rào ...
 url = https://bocongan.gov.vn/tin-tuc-su-kien/hoat-dong-cua-luc-luong-cong-an/tin-hoat-dong-cua-bo/phat-dong-thi-tuyen-phuong-an-kien-truc-cong-tuong-rao-ap-dung-trong-cong-an-nhan-dan-phu-hop-vung-mien-d2-t40106.html
+
+[katinat.vn]
+match = -160.0%%
+title = Hệ Thống Cửa Hàng - KATINAT Coffee & Tea House
+url = https://katinat.vn/cua-hang-2/
 
