--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-17 05:35:18
+lastsearch = 2024-07-17 15:34:50
 
 [www.cms.gov]
 match = 4.5%%
@@ -615,4 +615,9 @@ url = https://www.vftt.org/threads/tripyramids-from-the-kanc-5-30-05.6808/
 match = 0.0%%
 title = 
 url = https://en.wikipedia.org/wiki/Debarment
+
+[appropriations.house.gov]
+match = -13.6%%
+title = asRequestedCPFs_FY25_6.20.24
+url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
