CI images update

--- a/images/tham-chui-chan-khach-san-40x70-250gram/config.ini
+++ b/images/tham-chui-chan-khach-san-40x70-250gram/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chui-chan-khach-san-40x70-250gram.html
 lastopen = 2024-06-06 16:41:32
 
 [search]
-lastsearch = 2024-07-17 10:34:42
+lastsearch = 2024-07-17 16:16:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -20,4 +20,9 @@ url = https://www.tripadvisor.in/Hotel_Feature-g1152744-d2445691-zft9161-Cham_s_
 match = 78.9%%
 title = Thảm chùi chân khách sạn 40x70cm, 250gram/ cái
 url = https://khantamgiasi.vn/tham-chui-chan-khach-san-40x70cm-250gram-cai
+
+[www.tripadvisor.com.sg]
+match = -2.6%%
+title = CHOTDAEBAWI (CANDLESTICK ROCK) (2024) All You ...
+url = https://www.tripadvisor.com.sg/Attraction_Review-g1074141-d2355158-Reviews-Chotdaebawi_Candlestick_Rock-Donghae_Gangwon_do.html
 
