--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-17 11:34:33
+lastsearch = 2024-07-17 16:23:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Happiness Việt Nam
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = 42.9%%
-title = Bộ ga gối thun 3D hàn quốc Chó Happy
-url = https://shopee.vn/Bộ-ga-gối-thun-3D-hàn-quốc-Chó-Happy-i.25746013.18261378023
+match = -21.4%%
+title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
-match = 17.9%%
-title = Bộ chăn ga gối Happy Wedding Solid 84
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
+match = 21.4%%
+title = Bộ chăn ga gối Litter Girl Ctt112
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
 [demxanh.com]
 match = 0.0%%
