--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-17 13:42:40
+lastsearch = 2024-07-17 16:23:20
 
 [www.diepxuan.com]
-match = -72.7%%
-title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+match = -27.3%%
+title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
-match = 13.6%%
-title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
-url = https://shopee.vn/product/494447407/24864025138
+match = -68.2%%
+title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
+url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
 
 [m.facebook.com]
-match = -31.8%%
-title = Chăn Ga Gối Đệm Gấu-Bedding | Official Page
-url = https://m.facebook.com/sadboizvides/
+match = -13.6%%
+title = H&T Bedding - Tổng Kho Phân Phối
+url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
 
 [hanvico.com.vn]
 match = 31.8%%
