--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-17 13:17:01
+lastsearch = 2024-07-17 16:22:49
 
 [hanvico.com.vn]
-match = 28.6%%
-title = Bộ ga chun My Youth - MY18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
+match = 38.1%%
+title = Bộ ga chun LIVING - LV18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
 match = -33.3%%
-title = Bộ ga chun Silky G121 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-silky-g121
+title = Bộ ga chun Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
 match = -114.3%%
