--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-17 12:40:15
+lastsearch = 2024-07-17 16:16:20
 
 [tiki.vn]
 match = -47.6%%
@@ -77,9 +77,9 @@ title = Đài Bắc – Wikipedia tiếng Việt
 url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
 [vn.taiwantoday.tw]
-match = -119.0%%
-title = 6 bộ phim hay của Đài Loan được trình chiếu tại Liên hoan ...
-url = https://vn.taiwantoday.tw/news.php?unit=461&post=205612
+match = -41.7%%
+title = Taiwan Today
+url = https://vn.taiwantoday.tw/
 
 [nhandan.vn]
 match = -142.9%%
