--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-17 13:36:25
+lastsearch = 2024-07-17 16:21:31
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -131.2%%
+title = Mẹ chuyên gia trang điểm Đình Phú sốc, ngất xỉu
+url = https://baomoi.com/vu-4-nguoi-viet-tu-vong-o-thai-lan-me-chuyen-gia-trang-diem-dinh-phu-soc-ngat-xiu-c49656826.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -150.0%%
-title = Chiến sĩ Cộng Hòa - Page 25 - Google Books Result
-url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA18-PA25&lpg=RA18-PA25&dq=chieu+lac+soc+16&source=bl&ots=p30QRMbVQv&sig=ACfU3U3x4CEue_AK9pUQYaLRrbyLYWdt0A&hl=en&sa=X&ved=2ahUKEwiCxcbzuq2HAxVBMlkFHXOIAioQ6AF6BAgeEAM
+match = -231.2%%
+title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
+url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash2_g9NNR&sig=ACfU3U3JUtFKywJhwRzOWpykDXxSIqs2Tw&hl=en&sa=X&ved=2ahUKEwjAsJbn362HAxW2FFkFHZEtAywQ6AF6BAggEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
