--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-17 15:45:51
+lastsearch = 2024-07-17 16:20:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -95.2%%
-title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
-url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
@@ -417,9 +417,9 @@ title = SĂN DEAL TANJURO... - Hơi Thở Mặt Trời
 url = https://www.facebook.com/story.php?story_fbid=122155134374126177&id=61553785312238&post_id=61553785312238_122155134374126177
 
 [haiquanonline.com.vn]
-match = -133.3%%
-title = Ngay trong ngày đầu tiên, khoảng 2 triệu người đã được ...
-url = https://haiquanonline.com.vn/ngay-trong-ngay-dau-tien-khoang-2-trieu-nguoi-da-duoc-nhan-luong-huu-va-tro-cap-bhxh-theo-muc-huong-moi-187542.html
+match = -119.0%%
+title = Hải Phòng: Thu ngân sách đạt 60.800 tỷ đồng, tăng trên 34%%
+url = https://haiquanonline.com.vn/hai-phong-thu-ngan-sach-dat-60800-ty-dong-tang-tren-34-188035.html
 
 [baovinhphuc.com.vn]
 match = -104.8%%
