--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-17 13:51:42
+lastsearch = 2024-07-17 16:16:44
 
 [www.lazada.vn]
 match = -166.7%%
@@ -130,4 +130,9 @@ url = https://gagoda.vn/san-pham/chi-tiet/vo_goi_vuong_long/6918
 match = -33.3%%
 title = Gối & Vỏ Gối (Có 85 sản phẩm)
 url = https://dienmaycholon.com/goi-vo-goi
+
+[phedecor.com]
+match = 6.7%%
+title = PKT18 - Gối tựa lưng
+url = https://phedecor.com/goi-vuong-sofa--pkt18.html
 
