CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-17 11:39:55
+lastsearch = 2024-07-17 16:35:57
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = -80.0%%
-title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
-url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
+match = 0.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
 match = -8.0%%
@@ -240,4 +240,9 @@ url = https://www.ustraveldocs.com/vn_vn/vn-gen-faq.asp
 match = -44.0%%
 title = Cửa nhựa Đài Loan YG-12 chính hãng giá tốt LH ...
 url = https://saigondoor.vn/cua-nhua-dai-loan-yg-12/
+
+[vn.taiwantoday.tw]
+match = -66.7%%
+title = Taiwan Today
+url = https://vn.taiwantoday.tw/
 
