--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-17 13:48:52
+lastsearch = 2024-07-17 16:33:49
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -175,4 +175,19 @@ url = https://www.vms-south.vn/wp-content/uploads/2015/02/05-TBHH-TCTBDATHHMN.pd
 match = -70.8%%
 title = Việc Làm Bảo Vệ Ca Đêm Mới Nhất 2024 | Vieclamtot
 url = https://www.vieclamtot.com/tags/bao-ve-ca-dem
+
+[svhttdl.bentre.gov.vn]
+match = 8.3%%
+title = Thông tin cần biết - Tổng quát
+url = https://svhttdl.bentre.gov.vn/Lists/ThongTinCanBiet/Tongquat.aspx?Paged=TRUE&p_PublishedDate=20210816 12:00:00&p_ID=600&PageFirstRow=361&&View={52E84853-BA9D-41EB-AC60-38709374B64B}
+
+[cairang.cantho.gov.vn]
+match = -57.1%%
+title = s6:Agifg IUBND
+url = https://cairang.cantho.gov.vn/wps/wcm/connect/cairang/4fb2eb95-1829-4111-9c95-ef762edf079d/CV+1918+thông+báo+kết+quả+kiểm+tra+thẩm+định+PA+572KT.signed.pdf?MOD=AJPERES&CONVERT_TO=url&CACHEID=ROOTWORKSPACE.Z18_5PKIGBC0NGBD90QJ1Q9H1M30U6-4fb2eb95-1829-4111-9c95-ef762edf079d-nVc7kOO
+
+[znews.vn]
+match = -41.7%%
+title = Điểm chuẩn cao nhất ĐH Bách khoa TP.HCM là 19,5
+url = https://znews.vn/diem-chuan-cao-nhat-dh-bach-khoa-tphcm-la-19-5-post263746.html
 
