--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-17 14:47:55
+lastsearch = 2024-07-17 16:36:52
 
 [xoptraisan.info]
 match = -147.1%%
@@ -22,9 +22,9 @@ title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
 url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
-match = -76.5%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -23.5%%
+title = Thảm Xốp 50x50cm Mặt Nỉ Hoa Văn
+url = https://vatlieulotsan.com/product/tham-xop-50x50cm-mat-ni-hoa-van/
 
 [lombom.com]
 match = -158.8%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -47.1%%
-title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
-url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
+match = -135.3%%
+title = [Trợ giá] Thảm xốp vân gỗ Cao cấp 1 bộ 6 miếng 60s60cm
+url = https://shopee.vn/product/74195497/1842818990?gsht=tvsIQ01vyExHjKvj
 
 [thamtraisan.info]
 match = -76.5%%
